<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NUMAD13-ZhengxingChen</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_bar">Zhengxing Chen</string>
    <string name="sudoku">Sudoku</string>
    <string name="about">About</string>
    <string name="dismiss">Dismiss</string>
    <string name="name">Zhengxing Chen</string>
    <string name="email">czxttkl@gmail.com</string>
    <string name="generr">Generate Error</string>
    <string name="quit">Quit</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="imei">IMEI:</string>
    <string name="dictionary">Dictionary</string>
    <string name="dabble">Dabble</string>
    <string name="two_player_dabble">Two Player Dabble</string>
    <string name="final_project">Final Project</string>
    <string name="debug_app_name">MAD13-Debug</string>
    <string name="team">Team partner:Shang Ma</string>
    

</resources>