<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#eeC0C0C0"
    android:padding="30dp">
	
    <ImageButton
        android:id="@+id/my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="false"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_gravity="center_horizontal"
      />
    
    <TextView
        android:id="@+id/imei_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imei"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_gravity="center_horizontal"
      />
    <TextView
        android:id="@+id/team_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:layout_gravity="center_horizontal"
      />

    <Button
        android:id="@+id/dismiss_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dismiss" 
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
